# HW_28

./: README.md  csv_to_json.py  db.sqlite3  pyproject.toml  requirements.txt
ads/: admin.py  models.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_category_options_and_more.py  0003_alter_ad_name.py  0004_alter_category_id.py  0005_alter_ad_options_alter_category_options.py
ads/urls/: ads.py  categories.py  root.py
avito/: settings.py  urls.py
user/: models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_location_options_alter_user_options.py
