[tool.poetry]
name = "hw27"
version = "0.1.0"
description = ""
authors = ["gerasiki <gerasiki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
Pillow = "^9.2.0"
psycopg2 = "^2.9.3"
asgiref = "^3.5.2"
CacheControl = "^0.12.11"
cachy = "^0.3.0"
certifi = "^2022.6.15"
charset-normalizer = "^2.1.1"
cleo = "^0.8.1"
clikit = "^0.6.2"
distlib = "^0.3.6"
filelock = "^3.8.0"
html5lib = "^1.1"
idna = "^3.3"
keyring = "^23.8.2"
lockfile = "^0.12.2"
msgpack = "^1.0.4"
packaging = "^21.3"
pastel = "^0.2.1"
pexpect = "^4.8.0"
pkginfo = "^1.8.3"
platformdirs = "^2.5.2"
poetry-core = "^1.0.8"
ptyprocess = "^0.7.0"
pylev = "^1.4.0"
pyparsing = "^3.0.9"
pywin32-ctypes = "^0.2.0"
requests = "^2.28.1"
requests-toolbelt = "^0.9.1"
shellingham = "^1.5.0"
six = "^1.16.0"
sqlparse = "^0.4.2"
tomlkit = "^0.11.4"
tzdata = "^2022.2"
urllib3 = "^1.26.12"
virtualenv = "^20.16.3"
webencodings = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
